about section - spacing fix & organizers 'coming soon' box

--- a/app/styles/styl/blocks/about.styl
+++ b/app/styles/styl/blocks/about.styl
@@ -5,8 +5,6 @@
 .row1
   display flex
   position: relative;
-  margin-left 50px
-  margin-right 50px
 
   &:before
     position: absolute;
@@ -19,7 +17,9 @@
     opacity .10
 
   &__element
-    margin 100px 0
+    margin 0px 50px
+    margin-top 120px
+    margin-bottom 70px
     padding 50px
     background-color white
 
@@ -69,8 +69,8 @@
   max-height: 202px;
   max-width: 331px;
   position: absolute;
-  right: -73px;
-  top: -78px;
+  right: -79px;
+  top: -58px;
   z-index: 10;
   transform: rotate(206deg);
 
@@ -98,7 +98,7 @@
   position: absolute;
   right: -5rem;
   bottom: -2rem;
-  transform: rotate(-27deg);
+  transform: rotate(-23deg);
   z-index: 10;
 
 .lublin_title
@@ -113,7 +113,7 @@
 .lublin_info
   background #F8F8F8
   padding 50px
-  margin-top -155px
+  margin-top -170px
   font-size 20px
   color #525252
   font-family userfont
